<resources>
    <string name="units">Units</string>
    <string name="setupwizard_units_prompt">Select units you want to display values in</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="nav_setupwizard">Setup Wizard</string>
    <string name="setupwizard_finish">FINISH</string>
    <string name="welcome">Welcome</string>
    <string name="welcometosetupwizard">Welcome to setup wizard. It will guide you through the setup process\n</string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="end_user_license_agreement_text">MUST NOT BE USED TO MAKE MEDICAL DECISIONS. THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.</string>
    <string name="end_user_license_agreement_i_understand">I UNDERSTAND AND AGREE</string>
    <string name="display_settings">Display Settings</string>
    <string name="low_mark">LOW mark</string>
    <string name="high_mark">HIGH mark</string>
    <string name="low_mark_comment">Lower value of in range area (display only)</string>
    <string name="high_mark_comment">Higher value of in range area (display only)</string>
    <string name="permission">Permission</string>
    <string name="need_system_window_permission">Application needs system window permission for notifications</string>
    <string name="need_location_permission">Application needs location permission for BT scan and WiFi identification</string>
    <string name="need_background_location_permission">Application needs background location permission for automations</string>
    <string name="need_storage_permission">Application needs storage permission to be able store log files and export settings</string>
    <string name="askforpermission">Ask for permission</string>
    <string name="need_whitelisting">%1$s needs battery optimization whitelisting for proper performance</string>
    <string name="storedsettingsfound">Stored settings found</string>
    <string name="master_password_summary">Master password is used for backup encryption and to override security in application. Remember it or store on a safe place.</string>
    <string name="current_master_password">Current master password</string>
    <string name="common_values">Use values of your largest food you usually eat\n</string>
    <string name="syncinfotext">Synchronize data to the cloud. You can skip this part now but you will not be able to pass objectives until you set up Nightscout or Tidepool client.</string>
    <string name="status">Status:</string>
    <string name="patient_name">Patient name</string>
    <string name="patient_name_summary">Please provide patient name or nickname to differentiate among multiple setups</string>
    <string name="diawarning">Please remember: new insulin profiles require DIA at least 5h. DIA 5–6h on new profile is equal to DIA 3h on old insulin profiles.</string>
    <string name="profile">Profile</string>
    <string name="doprofileswitch">Do Profile Switch</string>
    <string name="exitwizard">Skip setup wizard</string>
    <string name="setupwizard_sensitivity_description">Sensitivity plugin is used for sensitivity detection and COB calculation. For more info visit:</string>
    <string name="setupwizard_sensitivity_url">https://wiki.aaps.app/en/latest/DailyLifeWithAaps/SensitivityDetectionAndCob.html</string>
    <string name="setupwizard_aps_description">Select one from availables algorithms. They are sorted from oldest to newest. Newer algorithm is usually more powerful and more aggressive. Thus if you are new looper you may probably start with AMA and not with latest one. Do not forget to read the OpenAPS documentation and configure it before use.</string>
    <string name="setupwizard_pump_waiting_for_riley_link_connection">Please configure your RileyLink below. After selecting a RileyLink, it will be possible to continue setup once the RileyLink status is \"Connected\". This might take a minute.\n</string>
    <string name="setupwizard_pump_pump_not_initialized"><b>Note:</b> You can continue setup once the pump has been set up.\n</string>
    <string name="startobjective">Start your first objective</string>
    <string name="setupwizard_pump_riley_link_status">RileyLink status:</string>
    <string name="readstatus">Read status</string>
    <string name="data_choices">Data Choices</string>
    <string name="fabric_upload">Fabric Upload</string>
    <string name="unattended_settings_export">Unattended Settings Export</string>
    <string name="unattended_settings_export_summary">Enabling this will securely store your password on your phone</string>
    <string name="identification">Identification (email, FB or Discord nick etc)</string>
    <string name="exported_to_google_drive">Settings successfully exported to Google Drive</string>
    <string name="export_to_google_drive_failed">Failed to export to Google Drive</string>
    <string name="google_drive_connection_failed">Google Drive connection failed</string>
    <string name="request">Request</string>
    <string name="apsmode_title">APS Mode</string>
    <string name="error_asking_for_permissions">Error asking for permissions</string>
    <string name="alert_dialog_permission_battery_optimization_failed">This device does not appear to support battery optimization whitelisting - you may experience performance issues.</string>
    <string name="config_builder">Config Builder</string>
    <string name="configbuilder_pump">Pump</string>
    <string name="configbuilder_pump_description">Which pump would you like to use with AAPS?</string>
    <string name="configbuilder_profile">Profile</string>
    <string name="configbuilder_profile_description">Which profile should AAPS use?</string>
    <string name="configbuilder_aps">APS</string>
    <string name="configbuilder_aps_description">Which APS algorithm should make therapy adjustments?</string>
    <string name="configbuilder_general">General</string>
    <string name="configbuilder_general_description">These are some general plugins you might find useful.</string>
    <string name="configbuilder_sync">Synchronization</string>
    <string name="configbuilder_sync_description">Data upload and synchronization plugins.</string>
    <string name="configbuilder_constraints_description">Which constraints are applied?</string>
    <string name="configbuilder_loop">Loop</string>
    <string name="configbuilder_loop_description">Use this to activate AAPS\' loop integration.</string>
    <string name="configbuilder_insulin_description">Which type of insulin are you using?</string>
    <string name="configbuilder_bgsource">BG Source</string>
    <string name="configbuilder_bgsource_description">Where should AAPS gain  it\'s data from?</string>
    <string name="configbuilder_smoothing">Smoothing</string>
    <string name="configbuilder_smoothing_description">Choose smoothing algorithm</string>
    <string name="configbuilder_sensitivity">Sensitivity detection</string>
    <string name="configbuilder_sensitivity_description">Which sensitivity algorithm should be used?</string>
    <string name="config_builder_shortname">CONF</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="allow_hardware_pump_text">Attention: If you activate and connect to a hardware pump, AAPS will copy the basal settings from the profile to the pump, overwriting the existing basal rate stored on the pump. Make sure you have the correct basal setting in AAPS. If you are not sure or don\'t want to overwrite the basal settings on your pump, press cancel and repeat switching to the pump at a later time.</string>
    <string name="a11y_open_settings">open settings</string>
    <string name="nsclient_version_does_not_match">AAPSClient version doesn\'t match AAPS version. Please update.</string>
    <string name="expand_category">Expand category</string>
    <string name="collapse_category">Collapse category</string>
    <string name="nav_preferences">Preferences</string>
    <string name="password_preferences_encrypt_prompt">You will be asked for master password, which will be used to encrypt exported preferences.</string>
    <string name="preferences_export_canceled">Export canceled! Preferences were NOT exported!</string>
    <string name="preferences_import_canceled">Import canceled! Preferences were NOT imported!</string>
    <string name="preferences_import_impossible">Cannot import preferences!</string>
    <string name="check_preferences_details_btn">Explain import issues…</string>
    <string name="check_preferences_details_title">Import issues details</string>
    <string name="check_preferences_import_btn">Import</string>
    <string name="check_preferences_import_anyway_btn">Import anyway (DANGEROUS!)</string>
    <string name="import_setting">Import settings</string>
    <string name="aaps_directory">AAPS directory</string>
    <string name="select_aaps_directory">Select AAPS directory for storing exports, configurations etc.</string>
    <string name="check_preferences_before_import">Please check preferences before importing:</string>
    <string name="check_preferences_cannot_import">Preferences cannot be imported!</string>
    <string name="check_preferences_dangerous_import">Preferences should not be imported!</string>
    <string name="export_to">Export settings to</string>
    <string name="import_from">Import settings from</string>
    <string name="setting_imported">Settings imported</string>
    <string name="old_master_password">Old Master Password</string>
    <string name="different_password_used">This file was exported and encrypted with different master password. Provide old master password to decrypt file.</string>
    <string name="master_password_will_be_replaced">As a result of successful import current master password WILL BE REPLACED with that old master password!</string>
    <string name="exported">Preferences exported</string>
    <string name="exported_failed">Preferences export failed!</string>
    <string name="filenotfound">File not found</string>
    <string name="goto_main_try_again">Please go back to main screen and try again.</string>
    <string name="restartingapp">Exiting application to apply settings.</string>
    <string name="ue_exported">User Entries exported</string>
    <string name="protection">Protection</string>
    <string name="master_password_missing">Master password is not set!\n\nPlease set your Master password in Preferences (%1$s)</string>
    <string name="maintenance">Maintenance</string>
    <string name="maintenance_shortname">MAINT</string>
    <string name="description_maintenance">Provides several functions for maintenance (eg. log sending, log deletion).</string>
    <string name="database_cleanup">Database cleanup</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="reset_aps_results_confirm">Do you really want to reset stored APS results?</string>
    <string name="maintenance_settings">Maintenance Settings</string>
    <string name="log_export_option">Log</string>
    <string name="user_settings_export_option">User Settings</string>
    <string name="user_entries_csv_export_option">Export User Entries to Excel (CSV)</string>
    <string name="email_option">Email</string>
    <string name="local_storage_option">Local Storage</string>
    <string name="cloud_storage_option">Cloud Storage</string>
</resources>